# DR-OPIC

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: activity_tracker.txt  ci_status.md  stats.json
.github/workflows/: hourly-commit.yml
docs/: API.md  ARCHITECTURE.md  LOCAL_FRAMEWORKS.md  MATH.md  QUICKSTART.md  RELEASE_PROTOCOL.md
dr_opic/: __init__.py  ablation.py  artifacts.py  cli.py  compression.py  datasets.py  delta.py  forge.py  losses.py  maths.py  preference.py  replay.py  routing.py  safety.py  scheduler.py  schemas.py  selectors.py  verifier.py
examples/: python_task.json  reverse_words_bad.py  reverse_words_good.py  sft_rows.jsonl
notebooks/: DR_OPIC_Tutorial.ipynb
tests/: test_core.py
