[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dr-opic"
version = "0.1.0"
description = "Domain-routed on-policy iterative correction framework for coding SLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "HOLYKEYZ" }]
keywords = ["slm", "coding", "verifier", "distillation", "rlvr", "lora"]
dependencies = []

[project.optional-dependencies]
torch = ["torch>=2.1"]
dev = ["pytest>=8"]

[project.scripts]
dr-opic = "dr_opic.cli:main"

[tool.setuptools.packages.find]
include = ["dr_opic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
