[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dr-opic"
version = "0.2.0"
description = "Domain-routed on-policy iterative correction framework for coding SLMs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "HOLYKEYZ" }]
keywords = ["slm", "coding", "verifier", "distillation", "rlvr", "lora"]
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
dev = ["pytest>=8"]

[project.scripts]
dr-opic = "dr_opic.cli:main"

[tool.setuptools.packages.find]
include = ["dr_opic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"
